[gd_scene load_steps=7 format=3 uid="uid://oqk2cp8vyi60"]

[ext_resource type="Script" path="res://MainMenu.gd" id="1_0sm01"]
[ext_resource type="Texture2D" uid="uid://k52bo7ptt0d6" path="res://CafeBG.png" id="1_xinu2"]

[sub_resource type="FontVariation" id="FontVariation_ylfmf"]
spacing_glyph = 10

[sub_resource type="LabelSettings" id="LabelSettings_tk2yb"]
line_spacing = 0.0
font = SubResource("FontVariation_ylfmf")
font_size = 100
shadow_size = 20
shadow_color = Color(0, 0, 0, 1)

[sub_resource type="FontVariation" id="FontVariation_1aac7"]
spacing_glyph = 20

[sub_resource type="LabelSettings" id="LabelSettings_id4g4"]
line_spacing = 0.0
font = SubResource("FontVariation_1aac7")
font_size = 105
outline_size = 20
outline_color = Color(0, 0, 0, 1)

[node name="Control" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_0sm01")

[node name="CanvasLayer" type="CanvasLayer" parent="."]

[node name="TextureRect" type="TextureRect" parent="CanvasLayer"]
offset_top = 4.0
offset_right = 858.0
offset_bottom = 644.0
scale = Vector2(1.49133, 1.14221)
texture = ExtResource("1_xinu2")

[node name="ColorRect" type="ColorRect" parent="CanvasLayer"]
offset_left = 118.0
offset_top = 104.0
offset_right = 267.0
offset_bottom = 350.0
color = Color(0.266667, 0.266667, 0.266667, 0.803922)

[node name="MainMenu" type="MarginContainer" parent="CanvasLayer"]
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/margin_left = 120
theme_override_constants/margin_top = 80
theme_override_constants/margin_right = 120
theme_override_constants/margin_bottom = 80

[node name="HBoxContainer" type="HBoxContainer" parent="CanvasLayer/MainMenu"]
layout_mode = 2
theme_override_constants/separation = 100

[node name="VBoxContainer" type="VBoxContainer" parent="CanvasLayer/MainMenu/HBoxContainer"]
layout_mode = 2

[node name="Label" type="Label" parent="CanvasLayer/MainMenu/HBoxContainer/VBoxContainer"]
layout_mode = 2
text = "CAT"
label_settings = SubResource("LabelSettings_tk2yb")

[node name="Label4" type="Label" parent="CanvasLayer/MainMenu/HBoxContainer/VBoxContainer"]
layout_mode = 2
text = "FESTATION"
label_settings = SubResource("LabelSettings_id4g4")

[node name="StartButton" type="Button" parent="CanvasLayer/MainMenu/HBoxContainer/VBoxContainer"]
layout_mode = 2
size_flags_horizontal = 0
text = "START GAME"

[node name="InstructionButton" type="Button" parent="CanvasLayer/MainMenu/HBoxContainer/VBoxContainer"]
layout_mode = 2
size_flags_horizontal = 0
text = "INSTRUCTIONS"

[node name="QuitButton" type="Button" parent="CanvasLayer/MainMenu/HBoxContainer/VBoxContainer"]
layout_mode = 2
size_flags_horizontal = 0
toggle_mode = true
text = "QUIT"

[node name="Label3" type="Label" parent="CanvasLayer/MainMenu/HBoxContainer/VBoxContainer"]
layout_mode = 2
text = "Game by Kaylee Lewis"

[node name="CenterContainer" type="CenterContainer" parent="CanvasLayer/MainMenu/HBoxContainer"]
layout_mode = 2

[connection signal="pressed" from="CanvasLayer/MainMenu/HBoxContainer/VBoxContainer/StartButton" to="." method="_on_start_button_pressed"]
[connection signal="pressed" from="CanvasLayer/MainMenu/HBoxContainer/VBoxContainer/InstructionButton" to="." method="_on_instruction_button_pressed"]
[connection signal="pressed" from="CanvasLayer/MainMenu/HBoxContainer/VBoxContainer/QuitButton" to="." method="_on_quit_button_pressed"]
